# curves3d

./: .gitignore  CMakeLists.txt  README.md  generate_project.bat  generate_project.sh  main.cpp
curves/: CMakeLists.txt  circle.cpp  circle.h  ellipse.cpp  ellipse.h  icurve.h  spiral.cpp  spiral.h
